# bAnchor

./: Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml
crates/banchor/: Cargo.toml
crates/banchor/corpus/: banchor-v0.toml
crates/banchor/src/: cli.rs  corpus_index.rs  error.rs  induct.rs  induction_state.rs  invocation.rs  lib.rs  main.rs  output.rs  prompt_text.rs  routing.rs  runtime.rs  substrate_input.rs  taxonomy.rs  update.rs
crates/banchor/tests/: cli.rs  cli_json_flag.rs  corpus_load_and_resolve.rs  error.rs  induct.proptest-regressions  induct.rs  induct_run_contract.rs  induction_state.rs  invocation_transcript_contract.rs  mission_anchor_ref.rs  plumbing.rs  stdout_primacy_contract.rs  task_class.rs  update_subcommand.rs
crates/banchor/tests/common/: mod.rs
scripts/: public_voice_guard.sh
