[workspace]
members = ["crates/banchor"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bvasilenko/bAnchor"

[workspace.dependencies]
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
ulid = "1"
ed25519-dalek = "2"
base64 = "0.22"
toml = "0.8"
semver = { version = "1", features = ["serde"] }
httpmock = "0.7"
tempfile = "3"
